[project]
name = "lucid-stream"
version = "0.1.0"
description = "Stream Reactor remote tracks to YouTube Live via reactor-egress."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "reactor-egress",
    "reactor-sdk>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
reactor-egress = { path = "../reactor-egress", editable = true }
